# ratd

./: .gitignore  README.md  dataset_forecasting.py  dataset_forecasting_low_memory.py  diff_models.py  exe_forecasting.py  exe_forecasting_low_memory.py  exe_forecasting_ultra_low_memory.py  main.py  main_model.py  pyproject.toml  requirements.txt  utils.py
TCN-master/: README.md  datautils.py  retrieval.py
TCN-master/config/: retrieval_ele.yaml
config/: base_forecasting.yaml  low_memory_forecasting.yaml  ultra_low_memory_forecasting.yaml
data/TCN/: ele_hisvec_list.pt  ele_idx_list.pt
data/ts2vec/: electricity.csv
